fix alignment

--- a/styles.css
+++ b/styles.css
@@ -283,7 +283,7 @@ footer ul li a:hover {
 .bus-cards {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.4rem;
   margin-top: 1rem;
 }
 
@@ -291,7 +291,7 @@ footer ul li a:hover {
   background: #fdfdfd;
   border-radius: 0.75rem;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-  padding: 1rem;
+  padding: 0.4rem;
   border: 1px solid #f0f0f0;
 }
 
@@ -355,8 +355,7 @@ footer ul li a:hover {
   }
 
   .arrivals {
-    width: 100%;
-    justify-content: space-between;
+    width: 10%;
   }
 }
 
@@ -495,15 +494,16 @@ footer ul li a:hover {
   display: inline-block;
   color: #333;
 }
+
 .capacity-type-group {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media (max-width: 480px) {
-    .capacity-type-group {
-        flex-direction: row;
-        gap: 0.3rem; 
-    }
+  .capacity-type-group {
+    flex-direction: row;
+    gap: 0.3rem;
+  }
 }
